@@ -1,3 +1,7 @@
+2009-04-08  Christian Persch  <chpe@gnome.org>
+
+	* src/eggsmclient-xsmp.c: (save_state): Re-sync from libegg master.
+
 ============ Version 2.26.1
 
 2009-04-01  Bastien Nocera  <hadess@hadess.net>
